# atento-entendido-de-las-intenciones

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/analysis/: gemini.rs  intent.rs  mod.rs  types.rs
src/storage/: mod.rs  writer.rs
src/telegram/: client.rs  mod.rs  types.rs
src/web/: mod.rs  routes.rs  sse.rs  state.rs
templates/: dashboard.html
templates/static/: style.css
