[package]
name = "atento"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Telegram MTProto
grammers-client = { git = "https://github.com/Lonami/grammers.git" }
grammers-session = { git = "https://github.com/Lonami/grammers.git", default-features = false }
grammers-tl-types = { git = "https://github.com/Lonami/grammers.git" }

# Web
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs"] }
askama = "0.13"

# HTTP client for Gemini
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"

# Async utilities
tokio-stream = { version = "0.1", features = ["sync"] }
